[gd_scene load_steps=5 format=3 uid="uid://hqnvuggqtuie"]

[ext_resource type="Script" uid="uid://csgdva218hect" path="res://characters/NPCs/customer.gd" id="1_7tiyv"]
[ext_resource type="PackedScene" uid="uid://du3fa1pr4sp4q" path="res://characters/base_character.blend" id="2_r8ta2"]
[ext_resource type="Texture2D" uid="uid://c5qqu1l8imxh4" path="res://ingredients/wants_moonshine.png" id="3_f7asb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8l5f2"]

[node name="Customer" type="CharacterBody3D"]
script = ExtResource("1_7tiyv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8l5f2")

[node name="CarryingPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.51704144, 0.8750682, 0.11551142)

[node name="QueueRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(-2, 0, 0)

[node name="base_character" parent="." instance=ExtResource("2_r8ta2")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0, 0)

[node name="Skeleton3D" parent="base_character/Armature" index="0"]
bones/0/rotation = Quaternion(0, 0.7071068, 0, 0.7071068)
bones/2/position = Vector3(8.6544404e-08, 0.04783413, -0.5257202)
bones/2/rotation = Quaternion(-0.98994404, -1.00473336e-07, -2.468599e-07, 0.14146008)
bones/7/position = Vector3(-1.11215975e-07, 0.0478341, 0.52572024)
bones/7/rotation = Quaternion(8.543888e-08, 0.14146008, 0.98994404, -3.6204778e-08)

[node name="StatusSprite" type="Sprite3D" parent="."]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, -0.41102028, 2.2110915, -0.54005754)
billboard = 1
no_depth_test = true
render_priority = 5
texture = ExtResource("3_f7asb")

[node name="WaitAfterPurchaseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WaitAfterPurchaseTimer" to="." method="_on_wait_after_purchase_timer_timeout"]

[editable path="base_character"]
